# opencrab

./: .env.example  .gitignore  Cargo.toml  README.md  dev.sh  opencrab_framework_57fe0694.plan.md
config/: default.toml
crates/actions/: Cargo.toml
crates/actions/src/: bridge.rs  common.rs  discord_admin.rs  dispatcher.rs  learning.rs  lib.rs  llm_analysis.rs  llm_evaluation.rs  llm_selection.rs  search.rs  traits.rs  workspace.rs
crates/actions/tests/: engine_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  engine.rs  heartbeat.rs  identity.rs  lib.rs  memory.rs  skill.rs  soul.rs  workspace.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  queries.rs  schema.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  message.rs  traits.rs
crates/gateway/src/adapters/: cli.rs  discord.rs  mod.rs  rest.rs  websocket.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  message.rs  metrics.rs  pricing.rs  router.rs  traits.rs
crates/llm/src/providers/: anthropic.rs  google.rs  llamacpp.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
crates/llm/tests/: model_evaluation.rs  multi_agent_conversation.rs  openrouter_integration.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  discord.rs  discord_admin_impl.rs  discord_manager.rs  lib.rs  llm_adapter.rs  main.rs  process.rs
crates/server/src/api/: agents.rs  analytics.rs  memory.rs  mod.rs  sessions.rs  skills.rs  workspace.rs
crates/server/tests/: api_e2e.rs  real_llm_e2e.rs
dashboard/: Cargo.toml  Dioxus.toml  dev.sh  index.html  tailwind.config.js  tailwind.css
dashboard/assets/: tailwind.css
dashboard/src/: api.rs  app.rs  main.rs
dashboard/src/components/: agent_card.rs  header.rs  mod.rs  sidebar.rs  skill_editor.rs
dashboard/src/routes/: agents.rs  analytics.rs  home.rs  memory.rs  mod.rs  personas.rs  sessions.rs  skills.rs  workspace.rs
dashboard/tests/: api_tests.rs
docs/: DESIGN.md
skills/: autonomous.skill.md  llm-meta-analysis.skill.md  llm-selection.skill.md  self-learning.skill.md  workspace-management.skill.md
web/: dev.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: agents.test.ts  agents.ts  analytics.ts  client.test.ts  client.ts  memory.ts  sessions.test.ts  sessions.ts  skills.ts  types.ts  workspace.ts
web/src/components/layout/: AgentLayout.tsx  AppLayout.tsx  Header.tsx  Sidebar.test.tsx  Sidebar.tsx
web/src/components/ui/: ActionCard.tsx  AgentCard.test.tsx  AgentCard.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DetailRow.tsx  FileEntry.tsx  MetricCard.tsx  PersonalitySlider.tsx  QuickLink.tsx  SessionCard.tsx  SessionLogItem.tsx  SkillEditor.test.tsx  SkillEditor.tsx  StatCard.tsx
web/src/hooks/: useAgentContext.ts  useAgents.test.ts  useAgents.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: en.json  ja.json
web/src/pages/: AgentAnalytics.tsx  AgentCreate.tsx  AgentDetail.tsx  AgentIdentityEdit.tsx  AgentMemory.tsx  AgentOverview.tsx  AgentSessions.tsx  AgentSkills.tsx  Agents.test.tsx  Agents.tsx  Analytics.tsx  Home.test.tsx  Home.tsx  Memory.tsx  PersonaEdit.tsx  SessionDetail.tsx  Sessions.tsx  Skills.tsx  Workspace.tsx
web/src/styles/: tailwind.css
web/src/test/: setup.ts
