[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/llm",
    "crates/gateway",
    "crates/actions",
    "crates/db",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
tempfile = "3"
dotenvy = "0.15"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }

# Internal crates
opencrab-core = { path = "crates/core" }
opencrab-llm = { path = "crates/llm" }
opencrab-gateway = { path = "crates/gateway" }
opencrab-actions = { path = "crates/actions" }
opencrab-db = { path = "crates/db" }
