[package]
name = "opencrab-actions"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
opencrab-core = { workspace = true }
opencrab-llm = { workspace = true }
opencrab-gateway = { workspace = true }
opencrab-db = { workspace = true }
