[package]
name = "opencrab-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opencrab-core = { workspace = true }
opencrab-llm = { workspace = true }
opencrab-gateway = { workspace = true }
opencrab-actions = { workspace = true }
opencrab-db = { workspace = true }
rusqlite = { workspace = true }
opencrab-server = { path = "../server" }
dotenvy = { workspace = true }
uuid = { workspace = true }
