[package]
name = "opencrab-gateway"
version.workspace = true
edition.workspace = true

[features]
default = []
discord = ["serenity"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serenity = { workspace = true, optional = true }
