[package]
name = "opencrab-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
opencrab-core = { workspace = true }
opencrab-llm = { workspace = true }
opencrab-gateway = { workspace = true }
opencrab-actions = { workspace = true }
opencrab-db = { workspace = true }
