[package]
name = "opencrab-server"
version.workspace = true
edition.workspace = true

[features]
default = []
discord = ["opencrab-gateway/discord"]

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
opencrab-core = { workspace = true }
opencrab-llm = { workspace = true }
opencrab-gateway = { workspace = true }
opencrab-actions = { workspace = true }
opencrab-db = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
hyper = "1"
